--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,6 +3,6 @@ artifacts_root: artifacts
 
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://github.com/entbappy/Branching-tutorial/raw/master/winequality-data.zip
-  local_data_file: artifacts/data_ingestion/data.zip
+  source_URL: 
+  local_data_file: artifacts/data_ingestion/data.csv
   unzip_dir: artifacts/data_ingestion
